# db-connect-mcp

./: .copier-answers.yml  .env.example  .env.example.test  .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  claude_desktop_config.example.json  conftest.py  main.py  manifest.json  pyproject.toml  pyrightconfig.json  pytest.ini  server.json  sonar-project.properties  test_server.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/features/postgresql-17/: README.md  devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  publish.yml  scorecard.yml
demo/: demo.cast  demo.py  demo.tape
docs/: CLAUDE_CODE_INTEGRATION.md  DATABASE_EXPANSION_RECOMMENDATIONS.md  DEVELOPMENT.md  MCP_CAPABILITY_TEST_SUMMARY.md  README.md  SETUP.md  TUNNEL_TESTING_PLAN.md
docs/guides/: CLAUDE_CODE_INTEGRATION.md  DEVELOPMENT.md  DOCKER.md  REMOTE_MCP.md  SSH_TUNNEL.md  TESTING.md
docs/plans/: CODEQL_REMEDIATION_PLAN.md
scripts/: pem_to_base64.py
src/: __init__.py  server.py
src/adapters/: __init__.py  base.py  clickhouse.py  mysql.py  postgresql.py
src/core/: __init__.py  analyzer.py  connection.py  executor.py  inspector.py
src/db_connect_mcp/: __init__.py  __main__.py  cli_setup.py  server.py
src/db_connect_mcp/adapters/: base.py  clickhouse.py  mysql.py  postgresql.py
src/db_connect_mcp/auth/: __init__.py  jwt_verifier.py
src/db_connect_mcp/core/: __init__.py  analyzer.py  connection.py  executor.py  inspector.py  search.py  tunnel.py
src/db_connect_mcp/models/: __init__.py  config.py  database.py  profile.py  search.py  statistics.py
src/db_connect_mcp/utils/: __init__.py  serialization.py
src/db_mcp/: __main__.py
src/db_mcp/adapters/: __init__.py  clickhouse.py
src/db_mcp/core/: executor.py
src/db_mcp/models/: __init__.py  capabilities.py  database.py  query.py
src/models/: config.py  table.py
src/pg_da/: __init__.py  __main__.py  server.py
tests/: README.md  conftest.py  run_mcp_tests.py  test_clickhouse.py  test_clickhouse_server.py  test_components.py  test_mcp_server.py  test_mcp_tools.py  test_postgresql.py  test_psql_server.py  test_serialization.py  test_server.py  test_utils.py
tests/docker/: README.md  docker-compose.yml
tests/docker/bastion/: Dockerfile  entrypoint.sh
tests/docker/mysql/init/: 01-create-schema.sql  02-seed-data.sql
tests/docker/postgres/init/: 01-create-schema.sql  02-seed-data.sql  03-create-views.sql
tests/integration/: __init__.py  test_e2e_client_server.py  test_mcp_client_comprehensive.py  test_mcp_protocol.py  test_mcp_real_world_scenarios.py  test_mcp_workflows.py  test_oauth_jwt_auth.py  test_ssh_key_formats.py  test_ssh_tunnel.py  test_streamable_http_transport.py
tests/module/: __init__.py  test_analyzer.py  test_executor.py  test_inspector.py  test_mysql_analyzer.py  test_mysql_executor.py  test_mysql_inspector.py  test_pg_tunneled.py  test_search.py
tests/unit/: __init__.py  test_adapters_init.py  test_cli_args.py  test_comment_truncation.py  test_server_truncation.py  test_server_utils.py  test_tunnel.py  test_utils.py
tests/unit/adapters/: __init__.py  test_clickhouse_adapter.py  test_postgresql_adapter.py
tests/unit/core/: test_analyzer.py  test_connection.py  test_executor.py  test_inspector.py  test_search.py
tests/unit/models/: test_config.py  test_database.py  test_profile.py  test_query.py  test_statistics.py  test_table.py
