[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-connect-mcp"
version = "0.4.0"
description = "Multi-database MCP server for PostgreSQL, MySQL, and ClickHouse"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yuri Gui", email = "yugui923@users.noreply.github.com" }]
keywords = [
    "mcp",
    "database",
    "postgresql",
    "mysql",
    "clickhouse",
    "claude",
    "analysis",
    "data-exploration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "mcp>=1.26.0",  # CVE-2025-66416: DNS rebinding protection
    "pydantic>=2.11.0,<3.0.0",  # Aligned with mcp 1.26 requirement
    "orjson>=3.11.6",  # Fix for deeply nested structures
    "sqlalchemy[asyncio]>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.3.0",  # CVE-2025-62611: arbitrary file access fix
    "clickhouse-connect>=0.7.0",
    "sshtunnel>=0.4.0",
    "paramiko>=3.0.0,<4.0.0",  # sshtunnel 0.4.0 uses paramiko.DSSKey removed in 4.x
    "pyjwt[crypto]>=2.12.0",  # CVE-2026-32597: crit header bypass fix
    "httpx>=0.27.0",  # For JWKS fetching and token introspection
    "starlette>=0.52.1",  # CVE-2025-62727: Range header DoS fix
    "urllib3>=2.6.3",  # CVE-2025-66418, CVE-2025-66471, CVE-2026-21441: decompression bomb fixes
    "python-multipart>=0.0.22",  # CVE-2026-24486: path traversal fix
    "cryptography>=46.0.6",  # CVE-2026-26007, CVE-2026-34073: ECC + DNS constraint fixes
]

[project.urls]
Homepage = "https://github.com/yugui923/db-connect-mcp"
Repository = "https://github.com/yugui923/db-connect-mcp"
Issues = "https://github.com/yugui923/db-connect-mcp/issues"

[project.scripts]
db-connect-mcp = "db_connect_mcp.server:cli_entry"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.1.0",
    "black>=26.3.1",  # CVE-2026-32274: cache path traversal fix
    "ruff>=0.15.0",
    "pyright>=1.1.0",
    "hatchling>=1.0.0",
    "pytest-xdist>=3.8.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.sdist]
only-include = ["src/db_connect_mcp"]

[tool.hatch.build.targets.wheel]
packages = ["src/db_connect_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/db_connect_mcp"]
relative_files = true
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
